--- a/styles/navapol-style.css
+++ b/styles/navapol-style.css
@@ -11,14 +11,13 @@ body {
     border: 5px solid ;
     border-color: aquamarine;
 }
+figcaption {
+    text-align: center;
+    font-size: small;
+}
 img {
     display: block;
     margin: 0 auto;
-}
-h1 {
-    color: gray;
-    font-size: 40px;
-    text-align: center;
 }
 p1, p2{
     color: gray;
@@ -29,4 +28,13 @@ p1, p2{
 ul {
     color: gray;
     font-size: 16px;
+}
+#heading {
+    color: blue;
+    text-shadow: 2px 2px black;
+    font-size: 40px;
+    text-align: center;
+}
+#popular {
+    border: 4px dotted red;
 }
